# GSP_project

./: .gitignore  00.shader  README.md
res/mod/: map.mtl  tank.mtl  tank_bounding.mtl  tank_one_box.mtl
res/mod/.mayaSwatches/: camouflage-texture-patterns-07.jpg_hcm.swatch
res/shaders/: 00.shader  Neues Textdokument.txt  depthFrag.shader  depthVert.shader  frag.shader  fragment00.shader  vert.shader  vertex00.shader
src/: CMakeLists.txt  app.cpp  app.hpp  camera.cpp  camera.h  geometry.cpp  geometry.hpp  main.cpp  objLoader.cpp  objLoader.hpp  window.cpp  window.hpp
